--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </h1>
         </div>
         <div class="col-lg-6">
-          <img class="title-image" onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="images/Rahul.png"/>
+          <img class="title-image" onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="Rahul.png"/>
         </div>
       </div>
     </div>
